--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <!-- <script src="10(a)-UserInputandCheck.js"></script> -->
 <!-- <script src="13(d)-halfpyramid.js"></script> -->
 <!-- <script src="14(a)-promt-user.js"></script> -->
-<script src="18(a)-prompt-username.js"></script>
+<!-- <script src="18(a)-prompt-username.js"></script> -->
+<script src="30(a)-SumofNumReduce.js"></script>
 <!-- <script>
     for(let i = 1; i <= 5; i++){  // 1
         for(let j = 1; j <= i; j++){  // 2
