--- a/ind.html
+++ b/ind.html
@@ -48,9 +48,37 @@
 
                          <!-- 33 folder -->
 
-    <h1 id="head">Hello JS.</h1>
+    <!-- <h1 id="head">Hello JS.</h1>
     <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <script src="33-AttributeDOM.js"></script>
+    <script src="33-AttributeDOM.js"></script> -->
+
+
+                             <!-- 34 folder -->
+
+    <!-- <div id="box">
+        this is a box.
+    </div>
+    <script src="34-StyleDOM.js"></script> -->
+
+
+                              <!-- 35 folder -->
+
+    <!-- <div id="box">
+        This is unOrdered List.
+        <ul>List name
+            <li>Hello!</li>
+            <li>Hey!</li>
+            <li>Hii!</li>            
+        </ul>
+    </div>
+    <p>This is all type of Hello words.</p>
+    <script src="35-InsertDeleteElementDom.js"></script> -->
+
+
+                                  <!-- 35(a) folder -->
+
+    <p class="para">This is my created paragraph element.</p>
+   <script src="35(a)-QueofInsDel.js"></script>
 
 </body>
 
