--- a/indexofDOM.html
+++ b/indexofDOM.html
@@ -77,7 +77,7 @@
 
                                   <!-- 35(a) folder -->
 
-    <p class="para">This is my created paragraph element.</p>
+    <p class="paras">This is my created paragraph element.</p>
    <script src="35(a)-QueofInsDel.js"></script>
 
 </body>
